--- a/front/src/components/DepartureDate/DepartureDate.css
+++ b/front/src/components/DepartureDate/DepartureDate.css
@@ -5,3 +5,7 @@
 .react-calendar{
     display: none;
 }
+
+.react-calendar__navigation__next2-button, .react-calendar__navigation__prev2-button {
+    display: none;
+}
