--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -15,6 +15,19 @@ body {
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+#root > main {
+  flex: 1;
+  padding: 5vh 5vw;
+}
+
+@media (min-width: 768px) {
+  #root > main {
+    padding: 5vh 15vw;
+  }
 }
