CS-031 조회 결과 페이지

--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -31,3 +31,15 @@ body {
     padding: 5vh 15vw;
   }
 }
+
+#root > main.bg-denied {
+  background: #a43f3d;
+}
+
+#root > main.bg-limit {
+  background: #e7a3a2;
+}
+
+#root > main.bg-pass {
+  background: #9fd3d0;
+}
