--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -42,7 +42,7 @@ body {
 
 #root > main.bg-pass {
   background: #9fd3d0;
-  
+}
 /* TODO: 나중에 page 하위 폴더로 옮기기 */
 #reactgooglegraph-1 > div > div:first-child {
   width: 100% !important;
