--- a/front/src/pages/HomePage/HomePage.css
+++ b/front/src/pages/HomePage/HomePage.css
@@ -33,8 +33,32 @@
 }
 
 /* AutoComplete */
-.sc-bdVaJa{
+.homepage__contents div{
+    position: relative;
     max-width: 680px;
-    margin: 0 auto;
-    /* border: 1px solid #000; */
+    margin: 0 auto 40px;
+}
+.homepage__contents input{
+    width: 100%;
+    height: 50px;
+    text-align: center; 
+    border: 1px solid #000;
+    outline: none;
+}
+.homepage__contents input::placeholder{
+    text-align: center;
+}
+.homepage__contents div ul{
+    z-index: 10;
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    list-style: none;
+    background: #fff;
+    border: 1px solid #e3e3e3;
+    padding: 10px 0;
+}
+.homepage__contents div ul li{
+    line-height: 30px;
+    cursor: pointer;
 }
