--- a/front/src/pages/ResultPage/style.css
+++ b/front/src/pages/ResultPage/style.css
@@ -3,22 +3,29 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  min-height: 100vh;
   word-break: keep-all;
+  padding-bottom: 50px;
 }
 
 .result-card {
-  margin-bottom: 2rem;
-  padding: 2.5rem 2rem;
-  width: 100%;
+  margin: 120px 0 50px;
+  padding: 3rem;
+  max-width: 900px;
   text-align: center;
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.8);
 }
-
+.result-card .name{
+  font-size: 20px;
+  margin-bottom: 5px;
+}
 .result-card .action {
-  margin: 1rem 0;
   font-size: 36px;
+  font-weight: bold;
+}
+.result-card .source{
+  font-size: 14px;
 }
 
 .result-card .body {
@@ -27,4 +34,5 @@
   border-top: 1px solid rgba(164, 63, 61, 0.3);
   text-align: left;
   white-space: pre-wrap;
+  text-align: justify;
 }
