--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -19,9 +19,10 @@ body {
   height: 100%;
 }
 
-/* #root > main {
-  flex: 1;
-} */
+.navbar-dark .navbar-toggler {
+  border: none !important;
+  outline: none !important;
+}
 
 h2{
   font-size: 24px;
@@ -34,10 +35,33 @@ section {
   padding: 0 20px;
 }
 
+.btn {
+  min-width: 120px;
+  height: 50px;
+  padding: 0 20px;
+  border-radius: 15px;
+}
+.btn-dark{
+  background: #242424;
+}
+.btn-dark:hover{
+  background: #000;
+}
+
+.alert-primary {
+  background-color: #242424;
+  border: none;
+  color: #fff;
+  margin: 30px 0;
+}
+
 @media (max-width: 767px) {
   h2{
     font-size: 18px;
     font-weight: bold;
+  }
+  .btn{
+    width: 100%;
   }
 }
 
