--- a/front/src/components/Navigation/style.css
+++ b/front/src/components/Navigation/style.css
@@ -3,9 +3,11 @@
   position: fixed;
   width: 100%;
   box-shadow: 0 0 2rem #00000010;
+  padding: 10px 40px;
 }
 .navbar-dark .navbar-toggler{
   border-color: none;
+  padding: 0;
 }
 .bg-black {
   background-color: #242424 !important;
@@ -16,4 +18,7 @@
 }
 .navbar-dark .navbar-nav .nav-link.active{
   color: #E7A3A2;
+}
+a.nav-link{
+  padding: 10px 0;
 }
