--- a/front/src/components/Navigation/style.css
+++ b/front/src/components/Navigation/style.css
@@ -3,22 +3,44 @@
   position: fixed;
   width: 100%;
   box-shadow: 0 0 2rem #00000010;
-  padding: 10px 40px;
+  padding: 10px 50px;
+}
+.navbar-brand{
+  background: url(./corona_logo.svg) no-repeat;
+  background-size: cover;
+  width: 150px;
+  height: 38px;
 }
 .navbar-dark .navbar-toggler{
-  border-color: none;
+  border: none;
   padding: 0;
 }
 .bg-black {
-  background-color: #242424 !important;
+  background: #131313;
+  background: -webkit-linear-gradient(to right, #282929, #131313);
+  background: linear-gradient(225deg, #282929, #131313);
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: #fff;
+  color: #c3c3c3;
   font-size: 14px;
 }
+.navbar-dark .navbar-nav .nav-link:hover{
+  color: #e3e3e3;
+}
 .navbar-dark .navbar-nav .nav-link.active{
-  color: #E7A3A2;
+  color: #fff;
+  font-weight: bold;
 }
 a.nav-link{
   padding: 10px 0;
+}
+
+.map-area{
+  margin-top: 50px;
+}
+
+@media screen and (max-width:767px){
+  .navigation {
+    padding: 10px 20px;
+  }
 }
