--- a/front/src/pages/HomePage/HomePage.css
+++ b/front/src/pages/HomePage/HomePage.css
@@ -3,13 +3,14 @@
     position: relative;
     /* background: url(./Worldmap_bg.svg) no-repeat center;
     background-size: cover; */
-    background: #fafafa;
+    /* background: #fafafa; */
+    background: #f2f7fb;
     text-align: center;
     height: 100vh;
 }
 .homepage__contents{
     max-width: 900px;
-    /* background: rgba(255, 255, 255, 0.6); */
+    background: rgba(255, 255, 255, 0.6);
     box-shadow: 0 10px 21px #e7eeef;
     border-radius: 15px;
     padding: 50px 20px;
