--- a/front/src/pages/WarningPage/Warning.css
+++ b/front/src/pages/WarningPage/Warning.css
@@ -3,24 +3,29 @@
     align-items: baseline;
     margin-top: 50px;
 }
-.warning__container h3{
-    font-size: 16px;
-    font-weight: bold;
-    margin-left: 40px;
-    margin-top: 20px;
-    color: #A43F3D;
-}
 
 .warning__container ul{
     z-index: 10;
     background: #fff;
-    box-shadow: 0 10px 21px #e7eeef;
+    border: 1px solid #E9ECF3;
     padding: 30px 30px 30px 50px;
     border-radius: 15px;
     margin: 10px 20px 40px;
 }
 .warning__step{
     margin-left: 20px;
+}
+.warning__title{
+    list-style: none;
+}
+.warning__title h3{
+    font-size: 18px;
+    font-weight: bold;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    margin-left: -20px;
+    border-bottom: 1px solid #E9ECF3;
+    color: #A43F3D;
 }
 
 .mail_submit_btn{
