툴팁 내용에 한글 국가명 추가. 레이아웃 변경. warning marker필드 추가. 호버 시 툴팁 나타남 -> 선택(클릭) 시 툴팁 나타남.

--- a/front/src/pages/WarningPage/Warning.css
+++ b/front/src/pages/WarningPage/Warning.css
@@ -37,6 +37,11 @@ label{
     font-size: 14px;
 }
 
+.tooltip_kr {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
 @media (max-width: 960px){
     .warning__container{
         flex-direction: column;
