--- a/front/src/pages/MapPage/MapPage.css
+++ b/front/src/pages/MapPage/MapPage.css
@@ -14,8 +14,8 @@ path.rsm-geography {
         width: 100%;
         height: 500px;
     }
-    .__react_component_tooltip.tbb01df3-a9c3-42b4-84db-abd0f11f2dd5.place-top.type-dark {
-        padding: 5px 8px;
+    .__react_component_tooltip{
+        padding: 5px 10px;
         font-size: 12px;
     }
 }
