--- a/front/src/pages/WarningPage/Warning.css
+++ b/front/src/pages/WarningPage/Warning.css
@@ -8,7 +8,7 @@
     border: 1px solid #E9ECF3;
     padding: 30px 30px 30px 50px;
     border-radius: 15px;
-    margin: 10px 20px 40px;
+    margin: 10px 0 20px;
 }
 .warning__step{
     margin-left: 20px;
@@ -50,6 +50,9 @@ label{
         margin-top: 20px;
     }
     .warning__container ul{
-        margin: 10px;
+        margin: 10px 0;
+    }
+    .col-sm, .col-lg-6, .col-md-12{
+        padding: 0 5px;
     }
 }
