--- a/front/src/pages/WarningPage/Warning.css
+++ b/front/src/pages/WarningPage/Warning.css
@@ -45,7 +45,9 @@ label{
 
 .warning__map.special path {
     fill: #E7A3A2;
-    stroke: #E7A3A2;
+}
+.warning__map.warning path {
+    fill : #3D6298;
 }
 
 @media (max-width: 960px){
