--- a/front/src/pages/WarningPage/Warning.css
+++ b/front/src/pages/WarningPage/Warning.css
@@ -47,7 +47,7 @@ label{
     fill: #E7A3A2;
 }
 .warning__map.warning path {
-    fill : #3D6298;
+    /* fill : #3D6298; */
 }
 
 @media (max-width: 960px){
