--- a/front/src/assets/styles/index.css
+++ b/front/src/assets/styles/index.css
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  background: #fbfbfc;
 }
 
 #root {
