--- a/front/src/pages/WarningPage/Warning.css
+++ b/front/src/pages/WarningPage/Warning.css
@@ -43,9 +43,9 @@ label{
     font-weight: bold;
 }
 
-.warning__map.special path {
+/* .warning__map.special path {
     fill: #E7A3A2;
-}
+} */
 .warning__map.warning path {
     /* fill : #3D6298; */
 }
