--- a/front/src/pages/MailPage/MailPage.css
+++ b/front/src/pages/MailPage/MailPage.css
@@ -11,8 +11,7 @@ form{
     text-align: center;
     width: 100%;
     height: 100%;
-    margin: 100px 0px;
-
+    margin-top: 10%;
 }
 .mail_center {
     position: absolute;
