--- a/front/src/pages/ResultPage/style.css
+++ b/front/src/pages/ResultPage/style.css
@@ -40,6 +40,18 @@
   text-align: justify;
 }
 
+.spinner {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.spinner_center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media screen and (max-width:767px){
   .result-card{
     min-width: 80%;
