--- a/front/src/pages/MapPage/MapPage.css
+++ b/front/src/pages/MapPage/MapPage.css
@@ -1,46 +1,20 @@
 .section__map-page{
-    height: 100vh;
     overflow: hidden;
 }
 path.rsm-geography {
     outline: none;
 }
 .map-area{
-    overflow: hidden;
+    max-height: 600px;
 }
-.legend {
-    padding: 5% 0 2% 0;
-    width: 90%;
-    display: flex;
-    margin : 5px 5px 5px 5px auto;
+.zoomBtn__container {
+    position: absolute;
+    background: rgba(255,255,255,0.8);
 }
-.legend_text {
-    flex : 1;
-    margin-left: 4px;
-}
-.legend_restriction{
-    flex : 1;
-    max-width: 2%;
-    padding-bottom: 2%;
-    background-color: #E7A3A2;
-}
-.legend_prohibition{
-    flex : 1;
-    max-width: 2%;
-    padding-bottom: 2%;
-    background-color: #731B1A;
-}
-.legend_able{
-    flex : 1;
-    max-width: 2%;
-    padding-bottom: 2%;
-    background-color: #EEEEEE;
+button.MuiButtonBase-root.MuiIconButton-root.button {
+    outline: none;
 }
 @media screen and (max-width:767px){
-    .map-area svg {
-        width: 100%;
-        height: 500px;
-    }
     .__react_component_tooltip{
         padding: 5px 10px;
         font-size: 12px;
